added comments to files, working on adding update features to zines

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<!DOCTYPE html>
+<!--  Using the index.ejs instead-->
+<!-- <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -12,4 +13,4 @@
   <button type="submit">Submit</button>
 </form>
   </body>
-</html>
+</html> -->
